--- a/exam01.ipynb
+++ b/exam01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "exam01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbR4tPXXneYBdQj+QZEDMZ",
+      "authorship_tag": "ABX9TyPR8wpYFRJU5zPt1pa0MKVU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6814,7 +6814,7 @@
         "id": "o67BJRWjDDfh"
       },
       "source": [
-        "component ที่เหมาะสมที่ถูกเลือกมาใช้จะครอบคลุม variance ประมาณ 80% ซึ่งจากที่เปรียบเทียบสารอาหารระหว่าง Brand B กับ Brand D แล้ว PC1 + PC2 บวกกันได้ 81.39% ซึ่งสามารถอธิบายได้ครอบคลุม"
+        "component ที่เหมาะสมที่ถูกเลือกมาใช้จะครอบคลุม variance ประมาณ 80-90% ซึ่งจากที่เปรียบเทียบสารอาหารระหว่าง Brand B กับ Brand D แล้ว PC1 + PC2 บวกกันได้ 94.74% ซึ่งสามารถอธิบายได้ครอบคลุม"
       ]
     },
     {
