--- a/Multivariate_Exam.ipynb
+++ b/Multivariate_Exam.ipynb
@@ -58,7 +58,7 @@
         "import numpy as np\n",
         "import pandas"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
         "Name = 'กัลยารัตน์ แสนสมบัติ'\n",
         "ID = '623020513-7'"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
         "    \n",
         "    return pandas.DataFrame(DT)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "source": [
         "Data = DataGenerator(Name,ID)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +134,7 @@
       "source": [
         "Data"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,9 +626,9 @@
         "outputId": "43baa704-fc33-4be4-f824-721ff1623ef0"
       },
       "source": [
-        "Data.shape #ดูขนาดของข้อมูล Data ก่อน"
+        "Data.shape #ดูขนาดของข้อมูล Data "
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -645,15 +645,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gE2NGkS--5YI"
-      },
-      "source": [
-        "ทำการเตรียมข้อมูลก่อนจะนำข้อมูลไปใช้ โดยการตัดตัวที่มี correlation กันออกไป เพื่อลดข้อมูลที่เหมือนกันออกจาก Data"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "Ol_ZaM_TtLG9"
@@ -661,7 +652,7 @@
       "source": [
         "corr = np.corrcoef(Data.to_numpy().T)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -676,7 +667,7 @@
       "source": [
         "corr.shape"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -704,7 +695,7 @@
       "source": [
         "corr"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -742,12 +733,12 @@
         "outputId": "06262fcd-3fa7-437d-a439-87c773a52920"
       },
       "source": [
-        "for i in range(corr.shape[0]):\n",
+        "for i in range(corr.shape[0]): #ทำการวนลูปหาค่า correlation ที่ซ้ำกัน\n",
         "    for j in range(corr.shape[1]):\n",
         "        if (i !=j) and (corr[i,j] == 1.):\n",
-        "            print(f'column = {i}<=> column = {j} corrcoef = {corr[i,j]}') #จากการรันพบว่ามี correlation ที่เท่า = 1 แสดงว่าข้อมูลมีความสัมพันธ์กันและจะทำการนำ correlation ข้อมูล Data ออก"
+        "            print(f'column = {i}<=> column = {j} corrcoef = {corr[i,j]}') \n"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,6 +753,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "meWVe5Bh8jnP"
+      },
+      "source": [
+        "จากการวนลูปพบว่ามี correlation ที่ซ้ำกันและจะทำการตัดข้อมูลออก"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "UOzh1PqAxi-r"
@@ -769,7 +769,7 @@
       "source": [
         "newdata = Data.iloc[1:,:28]"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -785,7 +785,7 @@
       "source": [
         "newdata"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1213,10 +1213,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "yOmQ78-c-I7J"
+      },
+      "source": [
+        "จากทำการเลือกใช้ข้อมูลที่ไม่มี correlation = 1 จากตาราง Data ไม่สามารถ dropna จากชื่อ column ได้ จึงทำแบบนี้"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "1C7-0eISISNw"
       },
       "source": [
-        "##ข้อ 2"
+        "##ข้อ 2 ทำ clustering แล้วทำ visualize ข้อมูลแบบ 2 มิติ"
       ]
     },
     {
@@ -1234,9 +1243,9 @@
         "id": "q4dXz7Gsle9z"
       },
       "source": [
-        "from sklearn.cluster import KMeans"
+        "from sklearn.cluster import  KMeans #นำข้อมูลเข้า"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1254,10 +1263,19 @@
         "id": "T80SiqltlqsM"
       },
       "source": [
-        "kmeans = KMeans(random_state=2021)"
+        "kmeans = KMeans(random_state=2021) #เป็นคำสั่งของการกำหนดค่า K แต้ค่า K ที่เป็น Default เรายังไม่กำหนด"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I7RMozA9AGpP"
+      },
+      "source": [
+        "##Fit- transform"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1278,9 +1296,9 @@
         "outputId": "bc234db4-cffb-408d-9719-6430cb3eb89a"
       },
       "source": [
-        "kmeans.fit(Data)##คำนวณหาจุด cluter centers ของข้อมูล example_df_drop ด้วยวิธี K-means clustering"
+        "kmeans.fit(Data)##คำนวณหาจุด cluter centers ของข้อมูล newdata ด้วยวิธี K-means clustering"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1320,7 +1338,7 @@
         "y = kmeans.predict(Data) \n",
         "y"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1342,7 +1360,7 @@
         "id": "GMfdT8HGm9qN"
       },
       "source": [
-        "##ทำ PCA "
+        "## PCA "
       ]
     },
     {
@@ -1357,7 +1375,7 @@
         "\n",
         "new_pca = pca.fit_transform(newdata)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1368,7 +1386,7 @@
       "source": [
         "from matplotlib import pyplot as plt"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1387,7 +1405,7 @@
         "y = kmeans.predict(newdata)\n",
         "plt.scatter(new_pca[:,0],new_pca[:,1],c=y)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1453,9 +1471,9 @@
         "outputId": "881f918c-7061-43a4-cbe7-ab6fc6860103"
       },
       "source": [
-        "kmeans.inertia_ "
+        "kmeans.inertia_  #ทำการคำนวณค่า SSE ของ data"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1483,7 +1501,7 @@
         "    XX = kmeans.fit(Data)\n",
         "    SSE.append(kmeans.inertia_)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1498,7 +1516,7 @@
       "source": [
         "SSE"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1532,12 +1550,11 @@
         "outputId": "91c7a163-eea7-4f78-ce3b-71e023e6f824"
       },
       "source": [
-        "plt.plot([1,2,3,4,5,6,7,8],SSE,'o-b')\n",
-        "\n",
+        "plt.plot([1,2,3,4,5,6,7,8],SSE,'o-b') #ทำการนำค่า SSE ที่ได้มา plot กราฟเพื่อดูว่ามีกี่ k กลุ่ม\n",
         "plt.xlabel('k')\n",
         "plt.ylabel('SSE');"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1560,7 +1577,7 @@
         "id": "HakGVDMRsOYy"
       },
       "source": [
-        "จากกราฟจะบอกได้ว่า k มีทั้งหมด 3 กลุ่ม ดูจากจุดที่ k ที่ 3 เริ่มมีความแตกต่างของระยะห่างระหว่างจุดที่ใกล้กัน"
+        "จากกราฟจะบอกได้ว่า k มีทั้งหมด 3 กลุ่ม ดูจากจุดที่ k ที่ 3 เริ่มมีความแตกต่างของระยะห่างระหว่างจุดที่ใกล้กัน และจากกราฟจะเห็นได้ว่าค่า K  มีการเปลี่ยนแปลงของข้อมูลทำให้เราทราบว่ากราฟดังกล่าวมีค่า K = 3"
       ]
     },
     {
@@ -1580,7 +1597,7 @@
       "source": [
         "from sklearn import metrics"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1596,7 +1613,7 @@
         "    score = metrics.silhouette_score(Data,kmeans.labels_)\n",
         "    SilH.append(score)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1614,7 +1631,7 @@
         "plt.xlabel('k')\n",
         "plt.ylabel('Silhouette Score');"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1637,7 +1654,7 @@
         "id": "jap24Z9krr4v"
       },
       "source": [
-        "จากกราฟจะบอกได้ว่า k มีทั้งหมด 3 กลุ่ม "
+        "จากกราฟจะบอกได้ว่า k แบ่งออกได้ 3 กลุ่ม "
       ]
     },
     {
@@ -1656,7 +1673,7 @@
         "y = kmeans.predict(newdata)\n",
         "plt.scatter(new_pca[:,0],new_pca[:,1],c=y,alpha=0.5)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1700,7 +1717,7 @@
         "id": "csITE_dCJWpW"
       },
       "source": [
-        "#ข้อ 3"
+        "##ข้อ 3 ลด Dimension ของข้อมูลเหลือ 2 มิติ แล้วทำ clustering แล้ว visualize ข้อมูลแบบ 2 มิติ"
       ]
     },
     {
@@ -1729,7 +1746,7 @@
       "source": [
         "from sklearn.manifold import MDS"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1738,9 +1755,9 @@
         "id": "IfUkjqIXBUZc"
       },
       "source": [
-        "mds = MDS(n_components=2)"
+        "mds = MDS(n_components=2) #กำหนดว่าเราจะใช้ components ของ mds เป็น 2"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1749,24 +1766,24 @@
         "id": "Jvjkx12u0iEq"
       },
       "source": [
-        "new_mds = mds.fit_transform(Data)"
+        "new_mds = mds.fit_transform(Data) #ทำการคำนวณข้อมูล คำนวณระยะห่างระหว่างจุด"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "no3oMy_Fjp03",
-        "outputId": "c0cddff1-d0ca-4dce-edbf-7118509658a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c0cddff1-d0ca-4dce-edbf-7118509658a3"
       },
       "source": [
         "new_mds.shape"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1786,15 +1803,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "os1-l-wnju8P",
-        "outputId": "8bd452a5-5753-45bc-c883-f5e1b3cbc17a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8bd452a5-5753-45bc-c883-f5e1b3cbc17a"
       },
       "source": [
         "new_mds"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1824,9 +1841,9 @@
       "source": [
         "kmeans2 = KMeans(n_clusters = 3,random_state=2021)\n",
         "kmeans2.fit(Data)\n",
-        "q = kmeans2.predict(Data)"
+        "q = kmeans2.predict(Data)kmeans #กำหนดให้ข้อมูลที่ทำการจัดกลุ่มเป็น q"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1842,7 +1859,7 @@
       "source": [
         "plt.scatter(new_mds[:,0],new_mds[:,1],c=q,alpha=0.5)"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1874,10 +1891,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xVBwwF003_-B"
+        "id": "rbvOGdsRKacB"
       },
       "source": [
-        "จากการทำข้อ2 กับ ข้อ3 การลดจำนวน Dimension ของข้อมูล ให้ข้อมูลลด Dimension ก่อน แล้วทำการ clustering จึงทำให้แตกต่างกัน จากนั้นผลลัพธ์ออกมาจึงไม่เหมือนกัน"
+        "จากกราฟที่ได้ พบว่าเมื่อแบ่งกลุ่มของ Data เป็น 3 กลุ่ม"
       ]
     },
     {
@@ -1886,7 +1903,16 @@
         "id": "pQ7glQk4kuxa"
       },
       "source": [
-        "##ข้อ 4"
+        "##ข้อ 4 เปรียบเทียบความแตกต่างของผลข้อ 2. กับ ข้อ 3."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KWbmoQNFD4e0"
+      },
+      "source": [
+        "##กราฟ ข้อ 2"
       ]
     },
     {
@@ -1905,7 +1931,7 @@
         "y = kmeans.predict(newdata)\n",
         "plt.scatter(new_pca[:,0],new_pca[:,1],c=y,alpha=0.5)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1935,20 +1961,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sM7hnBxqEAYw"
+      },
+      "source": [
+        "##กราฟ ข้อ 3"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "VdjvkWstk1ub",
-        "outputId": "090e8544-8c7f-4f5e-d05f-fac560390c99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        }
+        },
+        "outputId": "090e8544-8c7f-4f5e-d05f-fac560390c99"
       },
       "source": [
         "plt.scatter(new_mds[:,0],new_mds[:,1],c=q,alpha=0.5)\n",
         "plt.title('DataGenerator')"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1978,15 +2013,17 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "M9vYXn0Sld_p"
+        "id": "EcADedzuEP3d"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "จากการทำกราฟ ข้อ 2 กับ ข้อ 3 มีการกระจายข้อมูลที่แตกต่างกัน\n",
+        "\n",
+        "จากกราฟข้อ 2 มีการจัดกลุ่ม clustering และทำการลดจำนวน Dimension ของข้อมูล โดยการทำ PCA ในการลด Dimension โดยจุดของข้อมุลจะอยู่ที่เดิม\n",
+        "\n",
+        "จากกราฟข้อ 3 ได้ทำการ clustering ซึ่งทำการลด Dimention ด้วยวิธี MDS โดยทุกๆจุดของข้อมูลจะยึดจุดตั้งต้นที่กำหนดเป็นหลัก จึงทำให้แตกต่างกัน จากนั้นผลลัพธ์ออกมาจึงไม่เหมือนกัน"
+      ]
     }
   ]
 }
