--- a/Multivariate_Exam.ipynb
+++ b/Multivariate_Exam.ipynb
@@ -1263,7 +1263,7 @@
         "id": "T80SiqltlqsM"
       },
       "source": [
-        "kmeans = KMeans(random_state=2021) #เป็นคำสั่งของการกำหนดค่า K แต้ค่า K ที่เป็น Default เรายังไม่กำหนด"
+        "kmeans = KMeans(random_state=2021) #เป็นคำสั่งของการกำหนดค่า K แต่ค่า K ที่เป็น Default เรายังไม่กำหนด"
       ],
       "execution_count": null,
       "outputs": []
