อธิบายเพิ่มเติม เหลืออัดวิดีโอ

--- a/Multivariate_Exam.ipynb
+++ b/Multivariate_Exam.ipynb
@@ -1322,7 +1322,7 @@
         "id": "-ZH1cuz6mncP"
       },
       "source": [
-        "###ทำสอบการจัดกลุ่มของ Data"
+        "###ทดสอบการจัดกลุ่มของ Data"
       ]
     },
     {
