--- a/Multivariate_Exam.ipynb
+++ b/Multivariate_Exam.ipynb
@@ -1216,7 +1216,7 @@
         "id": "yOmQ78-c-I7J"
       },
       "source": [
-        "จากทำการเลือกใช้ข้อมูลที่ไม่มี correlation = 1 จากตาราง Data ไม่สามารถ dropna จากชื่อ column ได้ จึงทำแบบนี้"
+        "จากทำการเลือกใช้ข้อมูลที่ไม่มี correlation = 1 จากตาราง Data ไม่สามารถเอาคอลัมน์ ออกจากชื่อ column ได้ จึงทำแบบนี้"
       ]
     },
     {
@@ -1550,7 +1550,7 @@
         "outputId": "91c7a163-eea7-4f78-ce3b-71e023e6f824"
       },
       "source": [
-        "plt.plot([1,2,3,4,5,6,7,8],SSE,'o-b') #ทำการนำค่า SSE ที่ได้มา plot กราฟเพื่อดูว่ามีกี่ k กลุ่ม\n",
+        "plt.plot([1,2,3,4,5,6,7,8],SSE,'o-b') #นำค่า SSE ที่ได้มา plot กราฟเพื่อดูว่ามีกี่ k กลุ่ม\n",
         "plt.xlabel('k')\n",
         "plt.ylabel('SSE');"
       ],
@@ -1708,7 +1708,7 @@
         "id": "A5m405dTt425"
       },
       "source": [
-        "จากกราฟจะเห้นได้ว่า เมื่อจัดกลุ่ม k ให้เท่ากับ 3 กลุ่มแล้ว จะมีข้อมูลบางจำนวนที่ทับซ้อนกัน และะเห็นได้อีกว่าข้อมูลชุดนี้ปริมาณที่มาก"
+        "จากกราฟจะเห้นได้ว่า เมื่อจัดกลุ่ม k ให้เท่ากับ 3 กลุ่มแล้ว จะมีข้อมูลบางจำนวนที่ทับซ้อนกัน และเห็นได้อีกว่าข้อมูลชุดนี้ปริมาณที่มาก"
       ]
     },
     {
