อธิบายเกือบเสร็จ และอัดวิดีโอ

--- a/Multivariate_Exam.ipynb
+++ b/Multivariate_Exam.ipynb
@@ -665,7 +665,7 @@
         "outputId": "fefcc915-ae29-4f20-e680-fb3bbc8356a9"
       },
       "source": [
-        "corr.shape"
+        "corr.shape #ดูขนาดของ corrcoef ของ Data"
       ],
       "execution_count": null,
       "outputs": [
@@ -1216,7 +1216,7 @@
         "id": "yOmQ78-c-I7J"
       },
       "source": [
-        "จากทำการเลือกใช้ข้อมูลที่ไม่มี correlation = 1 จากตาราง Data ไม่สามารถเอาคอลัมน์ ออกจากชื่อ column ได้ จึงทำแบบนี้"
+        "จากทำการเลือกใช้ข้อมูลที่ไม่มี correlation = 1 จากตาราง Data ไม่สามารถเอาคอลัมน์ออกได้ จึงทำแบบนี้"
       ]
     },
     {
@@ -1335,7 +1335,7 @@
         "outputId": "c098ae0c-cc20-41b9-c4ad-62d543df6068"
       },
       "source": [
-        "y = kmeans.predict(Data) \n",
+        "y = kmeans.predict(Data) #กำหนดให้ข้อมูลที่ทำการจัดกลุ่มเป็น y \n",
         "y"
       ],
       "execution_count": null,
@@ -1595,7 +1595,7 @@
         "id": "xKuJfkMHqudr"
       },
       "source": [
-        "from sklearn import metrics"
+        "from sklearn import metrics #นำimport metrics มาใช้"
       ],
       "execution_count": null,
       "outputs": []
@@ -1839,7 +1839,7 @@
         "id": "v7P9m5pY2k2c"
       },
       "source": [
-        "kmeans2 = KMeans(n_clusters = 3,random_state=2021)\n",
+        "kmeans2 = KMeans(n_clusters = 3,random_state=2021) #กำหนดกลุ่ม k = 3\n",
         "kmeans2.fit(Data)\n",
         "q = kmeans2.predict(Data)kmeans #กำหนดให้ข้อมูลที่ทำการจัดกลุ่มเป็น q"
       ],
